[gd_scene load_steps=11 format=3 uid="uid://dsf8mokkxt4ty"]

[ext_resource type="Script" path="res://scenes/Microgames/hotdogcontest/hot_dog_eater2.gd" id="1_bxiys"]
[ext_resource type="Texture2D" uid="uid://bbcfi28ul4ugf" path="res://assets/images/HotDogStuff/HDBackground.png" id="2_hxbgf"]
[ext_resource type="PackedScene" uid="uid://c54of5w13vi05" path="res://scenes/Microgames/hotdogcontest/HotDogArmScene.tscn" id="3_exykm"]
[ext_resource type="Texture2D" uid="uid://cd1lp5suhgovf" path="res://assets/images/HotDogStuff/HotDogMan.png" id="4_p2vic"]
[ext_resource type="Texture2D" uid="uid://d174tpn7td2b0" path="res://assets/images/HotDogStuff/HDTopLayer.png" id="5_o506x"]
[ext_resource type="AudioStream" uid="uid://easpuyjuvka0" path="res://audio/Hotdog/EatingNoise1.mp3" id="6_ffypn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ea3uk"]
atlas = ExtResource("4_p2vic")
region = Rect2(0, 0, 360, 278)

[sub_resource type="AtlasTexture" id="AtlasTexture_co8sn"]
atlas = ExtResource("4_p2vic")
region = Rect2(360, 0, 360, 278)

[sub_resource type="AtlasTexture" id="AtlasTexture_fda6v"]
atlas = ExtResource("4_p2vic")
region = Rect2(720, 0, 360, 278)

[sub_resource type="SpriteFrames" id="SpriteFrames_y1r1w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ea3uk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_co8sn")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_fda6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_co8sn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ea3uk")
}],
"loop": false,
"name": &"default",
"speed": 20.0
}]

[node name="HotDogEater" type="Node2D"]
position = Vector2(960, 540)
script = ExtResource("1_bxiys")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_hxbgf")

[node name="HotDogArmScene" parent="." instance=ExtResource("3_exykm")]
position = Vector2(-212, 50)

[node name="PlayerNumber" type="Label" parent="."]
offset_left = -366.0
offset_top = -335.0
offset_right = -174.0
offset_bottom = -182.0
theme_override_colors/font_color = Color(0.91, 0.273, 0.283617, 1)
theme_override_colors/font_outline_color = Color(0.45098, 0.027451, 0.0352941, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 112
text = "0
"
horizontal_alignment = 1

[node name="DogEaterNumber" type="Label" parent="."]
offset_left = 194.0
offset_top = -325.0
offset_right = 386.0
offset_bottom = -172.0
theme_override_colors/font_color = Color(0.352, 0.5104, 0.88, 1)
theme_override_colors/font_outline_color = Color(0.0666667, 0.215686, 0.568627, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 112
text = "3
"
horizontal_alignment = 1

[node name="HotDogMan" type="AnimatedSprite2D" parent="."]
position = Vector2(-634, 36)
sprite_frames = SubResource("SpriteFrames_y1r1w")
frame = 4
frame_progress = 1.0
offset = Vector2(400, 0)

[node name="TopLayer" type="Sprite2D" parent="."]
z_index = 5
texture = ExtResource("5_o506x")

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="WinGameTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-540, -540)
stream = ExtResource("6_ffypn")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="WinGameTimer" to="." method="_on_win_game_timer_timeout"]
